Add this commit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAVASCRIPT GAME</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="game">
     <div class="gameboard">
-        <div class="float"></div>
+        <div id="moving"></div>
         <div class="box">
         <div class="box1"></div>
         <div class="box2"></div>
@@ -19,11 +20,12 @@
     </div>
     </div>
     <div class="gamebutton">
-        <div class="button1"><p></p></div>
-        <div class="button2"><p></p></div>
-        <div class="button3"><p></p></div>
-        <div class="button4"><p></p></div>
+        <button id="btn1" onclick="moveUp()"><p></p></button>
+        <button id="btn2" onclick="moveLeft()"><p></p></button>
+        <button id="btn3" onclick="moveDown()"><p></p></button>
+        <button id="btn4" onclick="moveRight()"><p></p></button>
     </div>
     </div>
 </body>
+<script src="main.js"></script>
 </html>
